# ripgrep-proto-plugin

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: release.yml
src/: proto.rs
